2003-04-15  Andreas Kupries  <andreask@activestate.com>

	* skiplist.man:
	* skiplist.tcl:
	* skiplist.test: New files. Patch #553980 submitted by Eric Melski
	  <ericm@users.sourceforge.net> on behalf of Keith Vetter.

	* prioqueue.tcl:
	* prioqueue.test: New files. Patch #607085 submitted by Michael
	  Schlenker <mic42@users.sourceforge.net>.

2003-04-15  Andreas Kupries  <andreask@activestate.com>

	* tcllib_list.man: Changed name to struct_list.man. Allows for
	  usage of struct outside of tcllib, not as big a coupling.

	* graph.tcl: Redone the setting up of namespace a bit to prevent
	  problem with the generation of a master package
	  index. strcut.tcl bailed out with an error because the namespace
	  was net set up when using [pkg_mkIndex] in this directory.

2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test:
	* graph.man:
	* graph.tcl: Added code to look for the C-implementation, cgraph,
	  first, and to fall back to the Tcl implementation if cgraph is
	  not present (#720348). The documentation links to the place
	  where cgraph can be had from. Note presence of cgraph when
	  executing the testsuite.

2003-04-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* list.man: Changed name to tcllib_list.man to prevent a clash
	  with tcl's manpages.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* struct.tcl:
	* list.man:
	* matrix.man:
	* pool.man:
	* queue.man:
	* record.man:
	* stack.man:
	* tree.man:
	* pkgIndex.tcl:  Set version of the package to 1.3.

2003-04-09  Andreas Kupries  <andreask@activestate.com>

	* list.man:
	* list.test:
	* list.tcl: Added 'lcsInvertMerge'.

2003-04-08  Andreas Kupries  <andreask@activestate.com>

	* list.man:
	* list.test:
	* list.tcl: Added and documented commands [iota], [equal], and
	  [repeat]. Extended the testsuite.

2003-04-02  Andreas Kupries  <andreask@activestate.com>

	* list.cl:
	* list.test: Fixed SF tcllib bug #714209.
