@@ -1,3 +1,9 @@
+2003-04-16  Andreas Kupries  <andreask@activestate.com>
+
+	* prioqueue.tcl (__elementcopare): Failures in testsuite fixed,
+	  patch provided by original author, Michael Schlenker
+	  <mic42@users.sourceforge.net>.
+
 2003-04-15  Andreas Kupries  <andreask@activestate.com>
 
 	* skiplist.man:
